Add checks for schedule CSVs

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -33,14 +33,16 @@ jobs:
           git config --global --add safe.directory $(realpath .)
           git diff --exit-code --ignore-cr-at-eol *.rb
 
-      - name: Check HPXMLs
+      - name: Check HPXMLs/Schedules
         shell: bash
         run: |
           echo "Regenerating HPXML files..."
           openstudio tasks.rb update_hpxmls
-          echo "Checking for HPXML differences..."
           git config --global --add safe.directory $(realpath .)
+          echo "Checking for HPXML differences..."
           git diff --exit-code --ignore-cr-at-eol workflow/*.xml
+          echo "Checking for schedule CSV differences..."
+          git diff --exit-code --ignore-cr-at-eol HPXMLtoOpenStudio/resources/schedule_files/*.csv
 
       - name: Run measure unit tests
         run: |
