--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -2,9 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    types: [ synchronize, opened ]
+    types: [synchronize, opened]
   workflow_dispatch:
 
 jobs:
@@ -23,6 +23,7 @@ jobs:
           export DEBIAN_FRONTEND=noninteractive
           sudo apt update
           sudo -E apt-get install -y wget unzip python3-sphinx-rtd-theme
+          pip install pandas numpy
 
       - name: Check measures
         shell: bash
@@ -45,7 +46,13 @@ jobs:
           echo "Checking for schedule CSV differences..."
           echo "If differences are found below, then schedule CSVs need to be regenerated using: openstudio tasks.rb update_hpxmls"
           git diff --stat --ignore-cr-at-eol HPXMLtoOpenStudio/resources/schedule_files/*.csv
-          git diff --quiet --ignore-cr-at-eol HPXMLtoOpenStudio/resources/schedule_files/*.csv
+
+          # Run the detailed diff script if there are changes
+          if ! git diff --quiet --ignore-cr-at-eol HPXMLtoOpenStudio/resources/schedule_files/*.csv; then
+            echo "Detailed schedule file differences:"
+            cd HPXMLtoOpenStudio/resources/schedule_files
+            python print_diff.py
+          fi
 
       - name: Run measure unit tests
         run: |
@@ -210,12 +217,12 @@ jobs:
           cp -r base_results/results*.csv workflow/tests/base_results
           mkdir workflow/tests/test_results
           cp -r test_results/results* workflow/tests/test_results
-          
+
           pip install numpy
           pip install pandas
           pip install plotly
           pip install kaleido
-          
+
           python workflow/tests/compare.py -a results
           python workflow/tests/compare.py -a visualize
 
@@ -240,7 +247,7 @@ jobs:
           name: test_results
 
       - name: Commit latest results
-        shell: bash        
+        shell: bash
         run: |
           branch_name="${{ github.head_ref }}"
           git pull origin $branch_name
