Add concurrency to stop previous CI job

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,6 +7,12 @@ on:
     types: [ synchronize, opened ]
   workflow_dispatch:
 
+# Cancel in-progress jobs when a new commit is pushed to the PR
+# This avoids CI jobs "stacking up" for the same PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   run-unit-tests:
     runs-on: ubuntu-22.04
