--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -9,6 +9,7 @@ on:
 
 # Cancel in-progress jobs when a new commit is pushed to the PR
 # This avoids CI jobs "stacking up" for the same PR
+# This won't stop existing job if new commit is pushed with [ci skip].
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
