--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,197 +1,55 @@
-Layout/EndOfLine:
-  Enabled: false
-Layout/LineLength:
-  AutoCorrect: false
-  Enabled: false
-Layout/RescueEnsureAlignment:
-  AutoCorrect: true
-Style/FrozenStringLiteralComment:
-  AutoCorrect: true
-Style/HashEachMethods:
+AllCops:
+  DisabledByDefault: true
+
+Layout:
   Enabled: true
-Style/HashTransformKeys:
+Lint/DeprecatedClassMethods:
   Enabled: true
-Style/HashTransformValues:
+Lint/DuplicateElsifCondition:
   Enabled: true
-Gemspec/DeprecatedAttributeAssignment:
+Lint/DuplicateHashKey:
   Enabled: true
-Layout/SpaceBeforeBrackets:
+Lint/DuplicateMethods:
   Enabled: true
-Lint/AmbiguousAssignment:
+Lint/InterpolationCheck:
   Enabled: true
-Lint/DeprecatedConstants:
+Lint/LiteralAsCondition:
   Enabled: true
-Lint/DuplicateBranch:
+Lint/RedundantStringCoercion:
   Enabled: true
-Lint/DuplicateRegexpCharacterClassElement:
+Lint/SelfAssignment:
   Enabled: true
-Lint/EmptyBlock:
+Lint/UnderscorePrefixedVariableName:
   Enabled: true
-Lint/EmptyClass:
+Lint/UnusedBlockArgument:
   Enabled: true
-Lint/LambdaWithoutLiteralBlock:
+Lint/UnusedMethodArgument:
   Enabled: true
-Lint/NoReturnInBeginEndBlocks:
+Lint/UselessAssignment:
   Enabled: true
-Lint/NumberedParameterAssignment:
-  Enabled: true
-Lint/OrAssignmentToConstant:
-  Enabled: true
-Lint/RedundantDirGlobSort:
-  Enabled: true
-Lint/SymbolConversion:
-  Enabled: true
-Lint/ToEnumArguments:
-  Enabled: true
-Lint/TripleQuotes:
-  Enabled: true
-Lint/UnexpectedBlockArity:
-  Enabled: true
-Lint/UnmodifiedReduceAccumulator:
-  Enabled: true
-Style/ArgumentsForwarding:
-  Enabled: true
-Style/CollectionCompact:
+Style/AndOr:
   Enabled: true
 Style/Documentation:
-  Exclude:
-    - '**/tests/*.rb'
-    - 'workflow/**/*.rb'
-    - 'tasks.rb'
+  Enabled: true
 Style/DocumentationMethod:
-  Exclude:
-    - '**/tests/*.rb'
-    - 'workflow/**/*.rb'
-    - 'tasks.rb'
-Style/DocumentDynamicEvalDefinition:
   Enabled: true
-Style/EndlessMethod:
+Style/FrozenStringLiteralComment:
   Enabled: true
-Style/HashConversion:
+Style/HashSyntax:
   Enabled: true
-Style/HashExcept:
+Style/Next:
   Enabled: true
-Style/IfWithBooleanLiteralBranches:
+Style/NilComparison:
   Enabled: true
-Style/NegatedIfElseCondition:
+Style/RedundantParentheses:
   Enabled: true
-Style/NilLambda:
+Style/RedundantSelf:
   Enabled: true
-Style/RedundantArgument:
+Style/ReturnNil:
   Enabled: true
-Style/StringChars:
+Style/SelfAssignment:
   Enabled: true
-Style/SwapValues:
+Style/StringLiterals:
   Enabled: true
-Gemspec/DevelopmentDependencies: # new in 1.44
-  Enabled: true
-Gemspec/RequireMFA: # new in 1.23
-  Enabled: true
-Layout/LineContinuationLeadingSpace: # new in 1.31
-  Enabled: true
-Layout/LineContinuationSpacing: # new in 1.31
-  Enabled: true
-Layout/LineEndStringConcatenationIndentation: # new in 1.18
-  Enabled: true
-Lint/AmbiguousOperatorPrecedence: # new in 1.21
-  Enabled: true
-Lint/AmbiguousRange: # new in 1.19
-  Enabled: true
-Lint/ConstantOverwrittenInRescue: # new in 1.31
-  Enabled: true
-Lint/DuplicateMagicComment: # new in 1.37
-  Enabled: true
-Lint/DuplicateMatchPattern: # new in 1.50
-  Enabled: true
-Lint/EmptyInPattern: # new in 1.16
-  Enabled: true
-Lint/IncompatibleIoSelectWithFiberScheduler: # new in 1.21
-  Enabled: true
-Lint/NonAtomicFileOperation: # new in 1.31
-  Enabled: true
-Lint/RefinementImportMethods: # new in 1.27
-  Enabled: true
-Lint/RequireRangeParentheses: # new in 1.32
-  Enabled: true
-Lint/RequireRelativeSelfPath: # new in 1.22
-  Enabled: true
-Lint/UselessRescue: # new in 1.43
-  Enabled: true
-Lint/UselessRuby2Keywords: # new in 1.23
-  Enabled: true
-Metrics/CollectionLiteralLength: # new in 1.47
-  Enabled: true
-Naming/BlockForwarding: # new in 1.24
-  Enabled: true
-Security/CompoundHash: # new in 1.28
-  Enabled: true
-Security/IoMethods: # new in 1.22
-  Enabled: true
-Style/ArrayIntersect: # new in 1.40
-  Enabled: true
-Style/ComparableClamp: # new in 1.44
-  Enabled: true
-Style/ConcatArrayLiterals: # new in 1.41
-  Enabled: true
-Style/DataInheritance: # new in 1.49
-  Enabled: true
-Style/DirEmpty: # new in 1.48
-  Enabled: true
-Style/EmptyHeredoc: # new in 1.32
-  Enabled: true
-Style/EnvHome: # new in 1.29
-  Enabled: true
-Style/FetchEnvVar: # new in 1.28
-  Enabled: true
-Style/FileEmpty: # new in 1.48
-  Enabled: true
-Style/FileRead: # new in 1.24
-  Enabled: true
-Style/FileWrite: # new in 1.24
-  Enabled: true
-Style/InPatternThen: # new in 1.16
-  Enabled: true
-Style/MagicCommentFormat: # new in 1.35
-  Enabled: true
-Style/MapCompactWithConditionalBlock: # new in 1.30
-  Enabled: true
-Style/MapToHash: # new in 1.24
-  Enabled: true
-Style/MapToSet: # new in 1.42
-  Enabled: true
-Style/MinMaxComparison: # new in 1.42
-  Enabled: true
-Style/MultilineInPatternThen: # new in 1.16
-  Enabled: true
-Style/NestedFileDirname: # new in 1.26
-  Enabled: true
-Style/NumberedParameters: # new in 1.22
-  Enabled: true
-Style/NumberedParametersLimit: # new in 1.22
-  Enabled: true
-Style/ObjectThen: # new in 1.28
-  Enabled: true
-Style/OpenStructUse: # new in 1.23
-  Enabled: true
-Style/OperatorMethodCall: # new in 1.37
-  Enabled: true
-Style/QuotedSymbols: # new in 1.16
-  Enabled: true
-Style/RedundantConstantBase: # new in 1.40
-  Enabled: true
-Style/RedundantDoubleSplatHashBraces: # new in 1.41
-  Enabled: true
-Style/RedundantEach: # new in 1.38
-  Enabled: true
-Style/RedundantHeredocDelimiterQuotes: # new in 1.45
-  Enabled: true
-Style/RedundantInitialize: # new in 1.27
-  Enabled: true
-Style/RedundantLineContinuation: # new in 1.49
-  Enabled: true
-Style/RedundantSelfAssignmentBranch: # new in 1.19
-  Enabled: true
-Style/RedundantStringEscape: # new in 1.37
-  Enabled: true
-Style/SelectByRegexp: # new in 1.22
+Style/StringLiteralsInInterpolation:
   Enabled: true
