--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,7 +18,7 @@ jobs:
   run-unit-tests:
     runs-on: ubuntu-22.04
     container:
-      image: docker://nrel/openstudio:3.9.0
+      image: docker://nrel/openstudio:develop
     steps:
       - uses: actions/checkout@v4
         with:
@@ -95,7 +95,7 @@ jobs:
   run-workflow1-tests:
     runs-on: ubuntu-22.04
     container:
-      image: docker://nrel/openstudio:3.9.0
+      image: docker://nrel/openstudio:develop
     steps:
       - uses: actions/checkout@v4
         with:
@@ -118,7 +118,7 @@ jobs:
   run-workflow2-tests:
     runs-on: ubuntu-22.04
     container:
-      image: docker://nrel/openstudio:3.9.0
+      image: docker://nrel/openstudio:develop
     steps:
       - uses: actions/checkout@v4
         with:
@@ -138,20 +138,20 @@ jobs:
           path: workflow/tests/test_results
           name: results-workflow2-tests
 
-  run-windows-tests:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-      - name: Install software and run test
-        shell: pwsh
-        run: |
-          $env:OS_VERSION="3.9.0"
-          $env:OS_SHA="c77fbb9569"
-          Invoke-WebRequest -OutFile Windows.tar.gz -URI "https://github.com/NREL/OpenStudio/releases/download/v${env:OS_VERSION}/OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows.tar.gz"
-          tar -xzf Windows.tar.gz
-          & .\OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows\bin\openstudio.exe workflow\run_simulation.rb -x workflow\sample_files\base.xml --hourly ALL --add-component-loads --add-stochastic-schedules
+#  run-windows-tests:
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          ref: ${{ github.head_ref }}
+#      - name: Install software and run test
+#        shell: pwsh
+#        run: |
+#          $env:OS_VERSION="3.9.0"
+#          $env:OS_SHA="c77fbb9569"
+#          Invoke-WebRequest -OutFile Windows.tar.gz -URI "https://github.com/NREL/OpenStudio/releases/download/v${env:OS_VERSION}/OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows.tar.gz"
+#          tar -xzf Windows.tar.gz
+#          & .\OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows\bin\openstudio.exe workflow\run_simulation.rb -x workflow\sample_files\base.xml --hourly ALL --add-component-loads --add-stochastic-schedules
 
   merge-results:
     runs-on: ubuntu-22.04
