--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,10 +14,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
-env:
-  OS_VERSION: "3.10.0"
-  OS_SHA: 86d7e215a1
-
 jobs:
   run-unit-tests:
     runs-on: ubuntu-24.04
@@ -151,6 +147,8 @@ jobs:
       - name: Install software and run test
         shell: pwsh
         run: |
+          $env:OS_VERSION="3.10.0"
+          $env:OS_SHA="86d7e215a1"
           Invoke-WebRequest -OutFile Windows.tar.gz -URI "https://github.com/NREL/OpenStudio/releases/download/v${env:OS_VERSION}/OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows.tar.gz"
           tar -xzf Windows.tar.gz
           & .\OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows\bin\openstudio.exe workflow\run_simulation.rb -x workflow\sample_files\base.xml --hourly ALL --add-component-loads --add-stochastic-schedules
