--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,11 +14,13 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+env:
+  OS_VERSION: "3.10.0"
+  OS_SHA: 86d7e215a1
+
 jobs:
   run-unit-tests:
-    runs-on: ubuntu-22.04
-    container:
-      image: docker://nrel/openstudio:3.10.0
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
@@ -26,10 +28,15 @@ jobs:
 
       - name: Install software
         run: |
-          rm -f Gemfile.lock && bundle install
           export DEBIAN_FRONTEND=noninteractive
           sudo apt update
           sudo -E apt-get install -y wget unzip python3-sphinx-rtd-theme
+
+      - name: Install OpenStudio
+        run: |
+          wget -q -O OpenStudio.deb https://github.com/NREL/OpenStudio/releases/download/v${OS_VERSION}/OpenStudio-${OS_VERSION}+${OS_SHA}-Ubuntu-24.04-x86_64.deb
+          sudo dpkg -i OpenStudio.deb
+          rm OpenStudio.deb
 
       - name: Check measures
         shell: bash
@@ -62,13 +69,7 @@ jobs:
 
       - name: Run measure unit tests
         run: |
-          bundle exec rake test_measures
-
-      - name: Store code coverage
-        uses: actions/upload-artifact@v4
-        with:
-          path: coverage
-          name: coverage
+          for unit_test in **/tests/*.rb; do openstudio $unit_test; done
 
       - name: Store results
         uses: actions/upload-artifact@v4
@@ -93,21 +94,21 @@ jobs:
           path: docs/_build/html/
 
   run-workflow1-tests:
-    runs-on: ubuntu-22.04
-    container:
-      image: docker://nrel/openstudio:3.10.0
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Install software
+      - name: Install OpenStudio
         run: |
-          rm -f Gemfile.lock && bundle install
+          wget -q -O OpenStudio.deb https://github.com/NREL/OpenStudio/releases/download/v${OS_VERSION}/OpenStudio-${OS_VERSION}+${OS_SHA}-Ubuntu-24.04-x86_64.deb
+          sudo dpkg -i OpenStudio.deb
+          rm OpenStudio.deb
 
       - name: Run workflow tests
         run: |
-          bundle exec rake test_workflow1
+          openstudio workflow/tests/test_simulations1.rb
 
       - name: Store results
         uses: actions/upload-artifact@v4
@@ -116,21 +117,21 @@ jobs:
           name: results-workflow1-tests
 
   run-workflow2-tests:
-    runs-on: ubuntu-22.04
-    container:
-      image: docker://nrel/openstudio:3.10.0
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Install software
+      - name: Install OpenStudio
         run: |
-          rm -f Gemfile.lock && bundle install
+          wget -q -O OpenStudio.deb https://github.com/NREL/OpenStudio/releases/download/v${OS_VERSION}/OpenStudio-${OS_VERSION}+${OS_SHA}-Ubuntu-24.04-x86_64.deb
+          sudo dpkg -i OpenStudio.deb
+          rm OpenStudio.deb
 
       - name: Run workflow tests
         run: |
-          bundle exec rake test_workflow2
+          openstudio workflow/tests/test_simulations2.rb
 
       - name: Store results
         uses: actions/upload-artifact@v4
@@ -144,17 +145,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
-      - name: Install software and run test
+
+      - name: Install OpenStudio and run test
         shell: pwsh
         run: |
-          $env:OS_VERSION="3.10.0"
-          $env:OS_SHA="86d7e215a1"
           Invoke-WebRequest -OutFile Windows.tar.gz -URI "https://github.com/NREL/OpenStudio/releases/download/v${env:OS_VERSION}/OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows.tar.gz"
           tar -xzf Windows.tar.gz
           & .\OpenStudio-${env:OS_VERSION}+${env:OS_SHA}-Windows\bin\openstudio.exe workflow\run_simulation.rb -x workflow\sample_files\base.xml --hourly ALL --add-component-loads --add-stochastic-schedules
 
   merge-results:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs: [run-workflow1-tests, run-workflow2-tests]
     steps:
       - uses: actions/checkout@v4
@@ -189,7 +189,7 @@ jobs:
 
   compare-results:
     if: github.event_name == 'pull_request'
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs: merge-results
     steps:
       - uses: actions/checkout@v4
@@ -239,7 +239,7 @@ jobs:
           name: comparisons
 
   update-results:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     needs: merge-results
     steps:
       - uses: actions/checkout@v4
